--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "types": "src/index.ts",
   "type": "module",
   "scripts": {
+    "setup": "dotenv -e ../../.env.local -- npx tsx src/scripts/setup.ts",
     "migrate": "dotenv -e ../../.env.local -- npx tsx src/scripts/migrate.ts",
     "lint": "eslint . --ext .ts,.tsx,.js,.cjs --max-warnings 0",
     "typecheck": "tsc --noEmit",
@@ -27,9 +28,9 @@
     "dataloader": "^2.2.3"
   },
   "peerDependencies": {
-    "next": "~15",
-    "next-intl": "~3",
-    "react": "~19"
+    "next": "*",
+    "next-intl": "*",
+    "react": "*"
   },
   "peerDependenciesMeta": {
     "next": {
